2006-12-21  Junichi Uekawa  <dancer@debian.org>

	* tests/900_test_pbuilder.sh: do not call pdebuild through sudo.

2006-10-29  Junichi Uekawa  <dancer@debian.org>

	* tests/902_test_cowbuilder_fail.sh: use workaround hooks.

	* tests/901_test_pbuilder_create.sh: use workaround hooks.

	* tests/900_test_pbuilder.sh: use workaround hooks.

2006-08-31  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_update): fix to use command-line options.

2006-08-26  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c: copyright update

	* debian/README.Debian: update

	* cowbuilder.8: add see-also.

	* cowbuilder.c (cpbuilder_help): add comment of other pbuilder options.

	* cowbuilder.8: fix up documentation to explain other options are
	passed through.

	* cowbuilder.c (main): fix up parameter handling

2006-08-20  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_build, cpbuilder_login)
	(cpbuilder_execute, cpbuilder_update): abort and do not clean up
	if return code is wrong.

2006-07-26  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_update): do not remove base.cow if
	update failed.

2006-06-24  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (main): s/basepath/buildplace/ for -B.

2006-06-21  Junichi Uekawa  <dancer@debian.org>

	* cowbuilder.c (cpbuilder_build): support COWDANCER_REUSE option
	in build target. pbuilder-satisfydepends seems faster now.  50
	seconds -> 33 seconds to build pbuilder inside chroot.

	* tests/902_test_cowbuilder_fail.sh: fix thinko.

	* cow-shell.1: document.

	* cow-shell.c (main): COWDANCER_REUSE option; it is definitely
	faster.

	[08:23:25]dancer64:linux-2.6> time echo exit| cow-shell
	Invoking /bin/bash
	
	real    0m0.323s
	user    0m0.059s
	sys     0m0.256s
	[08:23:25]dancer64:linux-2.6> time echo exit| COWDANCER_REUSE=yes cow-shell
	Invoking /bin/bash
	
	real    0m0.006s
	user    0m0.004s
	sys     0m0.002s

2006-06-15  Junichi Uekawa  <dancer@debian.org>
