@@ -2,8 +2,11 @@ cowdancer (0.25) UNRELEASED; urgency=low
 
   * Bug fix: "cowdancer: Better explain how to use cowbuilder to build
     packages", thanks to Nelson A. de Oliveira (Closes: #405090).
+  * Bug fix: "cowdancer: cannot build gnustep-base with cowbuilder",
+    thanks to Hubert Chan (Closes: #402669).
+    Do not canonicalize lchown.
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 31 Dec 2006 14:18:05 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 31 Dec 2006 14:33:01 +0900
 
 cowdancer (0.24) unstable; urgency=low
 
